whitespace fix

--- a/style_created.css
+++ b/style_created.css
@@ -1,3 +1,11 @@
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 @font-face {
     font-family: '2';
     src: url('fonts/2.ttf') format('truetype');
